test/fail/id/nestedlocal.java
class Test {
    public void test() {
        int x = 3;
        if (x > 2) {
            int x = 1;
        }
    }
}
